# pico-templates

./: README.md
bare-metal/: CMakeLists.txt
bare-metal/src/: CMakeLists.txt  main.c
rtos-single-thread/: CMakeLists.txt
rtos-single-thread/lib/: CMakeLists.txt
rtos-single-thread/src/: CMakeLists.txt  main.c
